<resources>
    <string name="app_name">ArviFox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Arvifox title</string>
    <string name="nav_header_subtitle">arvifox.com</string>
    <string name="nav_header_desc">arvifox header</string>
    <string name="action_settings">Settings</string>

    <string name="left_drawer_menu_first">Phone Info</string>
    <string name="left_drawer_menu_https">Https</string>
    <string name="left_drawer_menu_geo">Geo position</string>
    <string name="left_drawer_menu_google_map">Google map</string>
    <string name="left_drawer_menu_google_ar">Google AR, VR, vision</string>

    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>

    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="title_activity_oauth_test">OAuthTestActivity</string>
    <string name="title_activity_start_ar">StartArActivity</string>
    <string name="title_activity_hello_scene">HelloSceneActivity</string>
    <string name="title_activity_augmented_image">AugmentedImageActivity</string>
    <string name="title_activity_simple_misc">SimpleMiscActivity</string>
    <string name="title_activity_camera_shot">CameraShotActivity</string>

    <string name="file_provider_authority" translatable="false">com.arvifox.arvi.FileProvider</string>
    <string name="title_activity_service_handler">ServiceHandlerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment 1</string>

    <string name="box">M0,0h12v12h-12z</string>

    <string name="strike_start">M4,4L4,4L3,5L3,5Z</string>
    <string name="strike_full">M4,4L20,20L19,21L3,5Z</string>
    <string name="strike_end">M20,20L20,20L19,21L19,21Z</string>

    <string name="strike_mask_start">M0,0H24V24H0Z M4,4L4,4L5,3L5,3Z</string>
    <string name="strike_mask_full">M0,0H24V24H0Z M4,4L20,20L21,19L5,3Z</string>
    <string name="strike_mask_end">M0,0H24V24H0Z M20,20L20,20L21,19L21,19Z</string>

    <string-array name="strarra">
        <item>sldjf</item>
        <item>cvxcv</item>
    </string-array>
</resources>
