<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_simple_misc"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Simple misc" />
        <item
            android:id="@+id/nav_simple_misc2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Simple misc2" />
        <item
            android:id="@+id/nav_phoneinfo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_drawer_menu_first" />
        <item
            android:id="@+id/nav_https"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_drawer_menu_https" />
        <item
            android:id="@+id/nav_geo_posiiton"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_drawer_menu_geo" />
        <item
            android:id="@+id/nav_google_map"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_drawer_menu_google_map" />
        <item
            android:id="@+id/nav_google_ar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_drawer_menu_google_ar" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery"
            android:visible="false" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow"
            android:visible="false" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools"
            android:visible="false" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"
                android:visible="false" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"
                android:visible="false" />
        </menu>
    </item>

</menu>
